--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-reveal": "^1.0.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
-    "react-slick": "^0.18.0"
+    "react-slick": "^0.18.0",
+    "react-toastify": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
